CICO-37654 minor style change

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -286,8 +286,11 @@
   transform: scale(1.5);
   cursor:pointer;
 }
-.eta-single select{
-    width:100%;
+.select-style.eta-single {
+  background: url(/assets/guestweb/common_images/arrow_down.gif) 97% 50% no-repeat #fff;
+  select{
+      width:100%;
+  }
 }
 /*---------------- carousal ---------------------------*/
 .carousal,.carousal-container{
