--- a/admin/partials/users/adUserDetails.html
+++ b/admin/partials/users/adUserDetails.html
@@ -96,7 +96,7 @@
 						class="boxes sortable empty short-list" data-drop="true" 
 						ng-model='assignedRoles' 
 
-						jqyoui-droppable="{multiple:true, onOver: 'reachedAssignedRoles'}" 
+						jqyoui-droppable="{multiple:true, onOver: 'reachedAssignedRoles', onDrop: 'onRoleChange'}"
 
 						data-type="target">
 
@@ -137,7 +137,7 @@
 						data-drop="true" ng-model='unAssignedRoles' 
 
 						data-jqyoui-options="{accept:'.assigned-user-roles'}"
-						jqyoui-droppable="{multiple:true, onOver: 'reachedUnAssignedRoles' }" data-type="source">
+						jqyoui-droppable="{multiple:true, onOver: 'reachedUnAssignedRoles', onDrop: 'onRoleChange' }" data-type="source">
 						
 							<li ng-repeat="role in unAssignedRoles" 
 							class="unassigned-user-roles li-draggable"
@@ -162,7 +162,7 @@
 					<div class="entry full-width">
 							<label for="defaultdashboard" >{{'DEFAULT_DASHBOARD'|translate}}<strong > * </strong></label>
 		                <div class="select">
-		                    <select id="defaultdashboard" ng-required="true" class="placeholder" ng-model = "data.default_dashboard_id" ng-options="dashboard.dashboard_id as dashboard.dashboard_name for dashboard in getMyDashboards()" >
+		                    <select id="defaultdashboard" ng-required="true" class="placeholder" ng-model = "data.default_dashboard_id" ng-options="dashboard.dashboard_id as dashboard.dashboard_name for dashboard in dashboardOptions" >
 		                      <option value="" disabled translate>SELECT_DEFAULT_DASHBOARD</option>
 		                    </select>
 		                </div>
