CICO-37536 fixes public theme language buttons, Any Theme-Specific css needs to be in the /theme/hotel_name directory .css file....

--- a/zest_station/css/themes/snt/theme.less
+++ b/zest_station/css/themes/snt/theme.less
@@ -311,6 +311,8 @@
 #actions {
     &.languages {
         .language {
+            background: @white;
+            color: @black;
             border: 6px solid @gradientStart;
             box-shadow: none;
             &.selected  {
