CICO-37396 : Placed save button and its functionality.

--- a/rover/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html
+++ b/rover/partials/nightlyDiary/rvNightlyDiaryTopEditBar.html
@@ -12,6 +12,6 @@
         <button type="button" class="button blank" ng-click="cancelEditReservation()">Cancel</button>
         <!-- Removes the reservation from the grid and moves it to the Unassigned sidebar (filter) -->
         <button ng-hide="true" type="button" class="button white red-text>">Unassign Room</button>
-        <button ng-hide="true" type="button" class="button green">Save Changes</button>
+        <button type="button" class="button green" ng-click="saveEditedReservation()">Save Changes</button>
     </div>
 </div>
