--- a/rover/partials/payment/rvARPaymentPartial.html
+++ b/rover/partials/payment/rvARPaymentPartial.html
@@ -30,7 +30,7 @@
 
 <!-- Reference field - use only when it exsits; This configuration is available in the Admin/Financials -->
 <div class="entry full-width reference"
-     ng-show="!paymentAttempted && isPaymentFailure && isDisplayRef">
+     ng-show="isDisplayRef && (!paymentAttempted || isPaymentFailure)">
     <label>Reference</label>
     <input ng-model="payment.referenceText" type="text"/>
 </div>
