CICO-37864 Fixed style issues

--- a/guestweb/common_css/avenue/theme.less
+++ b/guestweb/common_css/avenue/theme.less
@@ -124,8 +124,8 @@ textarea.sub-text, textarea.sub-text:hover{
 }
 
 .pickadate-cell .pickadate-active {
-  background-color: #b58b53 ;
-  color:#fff ;
+  background-color: #b58b53 !important;
+  color:#000 ;
 }
 .pickadate-head{
     color:#000000;
@@ -247,4 +247,7 @@ textarea.sub-text, textarea.sub-text:hover{
     font-size:32px;
   }
 
+}
+.phone-text, .phone-text:hover, .query-text, .query-text:hover{
+  color : #fff !important;
 }
