CICO-36269: Implemented to add TA param with request, Listed reservations with new API, Showed total counts and amount on top header

--- a/rover/partials/reports/shared/summaryCounts.html
+++ b/rover/partials/reports/shared/summaryCounts.html
@@ -198,6 +198,11 @@
     <li>Rooms<span>{{ summaryCounts}}</span></li>
 
 </ul>
+<!--Travel Agents Commision report -->
+<ul ng-if="isThisReport( 'TRAVEL_AGENT_COMMISSIONS' )" class="totals">
+    <li>Travel Agents<span>{{ totalCount}}</span></li>
+    <li>Total<span>{{ summaryCounts.total}}</span></li>
+</ul>
 
 <!--Market segment statistics report -->
 <ul ng-if="isThisReport('MARKET_SEGMENT_STAT_REPORT')" class="totals">
