--- a/rover/partials/accounts/transactions/rvAccountTransactions.html
+++ b/rover/partials/accounts/transactions/rvAccountTransactions.html
@@ -241,7 +241,7 @@
                                         </td>
                                         <td ng-show="showMoveCharges">
                                             <div class="select">
-                                                <select ng-change="moveToBillAction(feesData.oldBillValue, $index)" ng-model="feesData.billValue" iscroll-stop-propagation>
+                                                <select ng-change="moveToBillAction(feesData.oldBillValue, $index)" ng-model="feesData.billValue" convert-to-number iscroll-stop-propagation>
                                                     <option value="" disabled>Move to bill</option>
                                                     <option value="{{billNumbers.bill_number}}" ng-selected="billNumbers.bill_number==(currentActiveBill+1)" ng-repeat="billNumbers in transactionsDetails.bills"> {{billNumbers.bill_number}} </option>
                                                     <option value="{{transactionsDetails.bills.length+1}}" ng-show="transactionsDetails.bills.length<10">{{transactionsDetails.bills.length+1}} &nbsp;&nbsp;({{'NEW_BILL'|translate}})</option>
