--- a/rover/partials/allotments/reservations/rvAllotmentReservationsListTab.html
+++ b/rover/partials/allotments/reservations/rvAllotmentReservationsListTab.html
@@ -60,7 +60,7 @@
 			<div class="entry number">
 				<label for="rooming-no-of-rooms">{{'ALLOTMENT_NO__OF_ROOMS'|translate}}</label>
 				<div class="select">
-					<select id="rooming-no-of-rooms" ng-model="numberOfRooms">
+					<select id="rooming-no-of-rooms" ng-model="numberOfRooms" convert-to-number>
 						<option ng-repeat="roomcount in possibleNumberOfRooms" value="{{roomcount}}">{{roomcount}}</option>
 					</select>
 				</div>
