--- a/rover/partials/groups/rooming/popups/editReservation/rvGroupEditRoomingListItem.html
+++ b/rover/partials/groups/rooming/popups/editReservation/rvGroupEditRoomingListItem.html
@@ -29,9 +29,9 @@
 
             </div>
             <div class="entry margin type">
-                <label for="rooming-room-type">{{'GROUP_ROOM_TYPE'|translate}}</label>
+                <label>{{'GROUP_ROOM_TYPE'|translate}}</label>
                 <div class="select">
-                    <select id="rooming-room-type" ng-model="ngDialogData.room_type_id" ng-change="changedReservationRoomType(ngDialogData)" ng-disabled="shouldDisableReservationRoomTypeChange(ngDialogData)">
+                    <select convert-to-number ng-model="ngDialogData.room_type_id" ng-change="changedReservationRoomType(ngDialogData)" ng-disabled="shouldDisableReservationRoomTypeChange(ngDialogData)">
                         <option value="{{roomTypeData.room_type_id}}" ng-repeat="roomTypeData in ngDialogData.allowedRoomTypes" ng-selected="roomTypeData.room_type_id == ngDialogData.room_type_id">
                             {{roomTypeData.room_type_name}}
                         </option>
@@ -39,9 +39,9 @@
                 </div>
             </div>
             <div class="entry occupancy">
-                <label for="rooming-occupancy">{{'GROUP_OCCUPANCY'|translate}}</label>
+                <label>{{'GROUP_OCCUPANCY'|translate}}</label>
                 <div class="select">
-                    <select id="rooming-occupancy" ng-model="ngDialogData.occupancy" ng-disabled="shouldDisableReservationOccuppancyChange(ngDialogData)" ng-change="changedReservationOccupancy()">
+                    <select convert-to-number ng-model="ngDialogData.occupancy" ng-disabled="shouldDisableReservationOccuppancyChange(ngDialogData)" ng-change="changedReservationOccupancy()">
                         <option value="1" ng-show="shouldShowThisOccupancyAgainstRoomType('single_occupancy')">
                             {{'GROUP_SINGLE'|translate}}
                         </option>
