CICO-35792 - Style update

--- a/stylesheets/less/app/screens/12.reports.less
+++ b/stylesheets/less/app/screens/12.reports.less
@@ -2025,6 +2025,13 @@
                                 width: 60px;
                             }
 
+                            &.occupancy {
+                                min-width: 70px;
+                            } 
+                            &.avl {
+                                min-width: 90px;
+                            }
+
                             &.picked-up {
                                 min-width: 80px;
                             }
@@ -2965,7 +2972,7 @@
                     left: 125px;
 
                     .wrapper {
-                        width: 1500px;
+                        width: 1600px;
                     }
                 }
             }
