--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -138,3 +138,12 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Minion Regular';
+    src: url('/assets/type/Minion/minion_regular.otf');
+    src: url('/assets/type/Minion/minion_regular.eot?#iefix') format('embedded-opentype'), 
+    url('/assets/type/Minion/minion_regular.woff') format('woff'), 
+    url('/assets/type/Minion/minion_regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
