CICO-35792 Added new styles

--- a/rover/partials/reports/businessOnBooks/rvBusinessOnBooksReport.html
+++ b/rover/partials/reports/businessOnBooks/rvBusinessOnBooksReport.html
@@ -40,8 +40,8 @@
                 <thead>
                     <tr>
                         <th class="rooms" rowspan="2">Rms</th>
-                        <th class="rooms" rowspan="2">Occ %</th>
-                        <th class="rooms" rowspan="2">Avl. Rms</th>
+                        <th class="occupancy" rowspan="2">Occ %</th>
+                        <th class="avl" rowspan="2">Avl. Rms</th>
                         <th class="rooms" rowspan="2">OOO</th>
                         <th colspan="2">Total Rms</th>
                         <th colspan="4">Group Rooms</th>
