CICO-37985 Admin Light speed restaurant company dropdown fix

--- a/admin/partials/interfaces/LightSpeed/adLightSpedRestaurants.html
+++ b/admin/partials/interfaces/LightSpeed/adLightSpedRestaurants.html
@@ -109,6 +109,7 @@
                                         required="yes"
                                         placeholder="{{'PASSWORD_PLACEHOLDER' | translate}}"></ad-textbox>
                             <ad-dropdown-name savemodel="restaurant.company_id"
+                                              bind-number="true"
                                               valueproperty="id"
                                               label-in-drop-down="Select Company"
                                               property="name"
