--- a/zest_station/css/less/forms.less
+++ b/zest_station/css/less/forms.less
@@ -229,3 +229,33 @@ select {
 .demo-second-cls{
     top: 20px !important;
 }
+
+.key-text-style{
+    margin-bottom:2px;
+    &.more{
+        margin-bottom: 2%;
+    }
+}
+.key-text-reasons>li {
+    text-align: left !important;
+    width: 65% !important;
+    margin-left: 25%;
+
+    >h4{
+        font-weight: 500;
+    }
+}
+.footer-centered{
+    justify-content: center !important;
+}
+.select-sub-text{
+    font-size:16px;
+}
+.select-icon-checked>svg{
+    height:100%;
+    width:60%;
+    fill:@white;
+}
+.options-less-space{
+    margin-top:30px !important;
+}
