CICO-37342 CICO-37343 styles for giestweb and gulp linking

--- a/guestweb/common_css/font.less
+++ b/guestweb/common_css/font.less
@@ -147,3 +147,9 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Tsukushi';
+    src: url('/assets/type/Tsukushi/TsukushiBMaruGothic.ttc');
+    font-weight: normal;
+    font-style: normal;
+}
