--- a/rover/partials/reports/rvReports.html
+++ b/rover/partials/reports/rvReports.html
@@ -19,12 +19,20 @@
         <div id="reports-menu" ng-include="'/assets/partials/reports/shared/rvReportMainMenu.html'"></div>
 
         <!-- Content -->
-        <div id="reports-dashboard" class="scrollable" ng-class="getViewColClass()" ng-iscroll="FULL_REPORT_SCROLL"> <!-- Classes cols-2,cols-3 and cols-4 are added when showing 2,3 or 4 columns. Add horizontal scroller here -->
+        <div id="reports-dashboard" class="scrollable" ng-class="viewColClassName" ng-iscroll="FULL_REPORT_SCROLL"> <!-- Classes cols-2,cols-3 and cols-4 are added when showing 2,3 or 4 columns. Add horizontal scroller here -->
             <div class="wrapper">
                 <div class="cols-wrapper">
-                  <span ng-if="isReportView(reportViews[0])" ng-controller="RVReportListCrl" ng-include="'/assets/partials/reports/shared/rvViewAllReports.html'"></span>
-                  <span ng-if="isReportView(reportViews[1])" ng-controller="RVScheduleReportsCtrl" ng-include="'/assets/partials/reports/scheduleReport/rvScheduleReport.html'"></span>
-                  <span ng-if="isReportView(reportViews[2])" ng-controller="RVExportReportsCtrl" ng-include="'/assets/partials/reports/scheduleReport/rvExportReport.html'"></span>
+                  <span ng-include="'/assets/partials/reports/shared/rvViewAllReports.html'"
+                    ng-controller="RVReportListCrl"
+                    ng-if="reportViewStore.showingAllReport"></span>
+
+                  <span ng-include="'/assets/partials/reports/scheduleReport/rvScheduleReport.html'"
+                    ng-controller="RVScheduleReportsCtrl"
+                    ng-if="reportViewStore.showingScheduledReports || reportViewStore.showingScheduleAReport"></span>
+
+                  <span ng-include="'/assets/partials/reports/scheduleReport/rvExportReport.html'"
+                    ng-controller="RVExportReportsCtrl"
+                    ng-if="reportViewStore.showingExportReports || reportViewStore.showingExportAReport"></span>
                 </div>
             </div>
         </div>
