--- a/rover/partials/reports/shared/rvReportMainMenu.html
+++ b/rover/partials/reports/shared/rvReportMainMenu.html
@@ -1,13 +1,18 @@
 <ul id="report-main-menu">
-    <li ng-class="{'active': isReportView(reportViews[0])}" ng-click="switchReportView(reportViews[0])"> <!-- Selected by default -->
+    <li ng-class="{ 'active': reportViewStore.showingAllReport }"
+      ng-click="reportMainMenuChange(reportViewActions.SHOW_ALL_REPORT)">
         <i class="icon-report icon-all-reports"></i>
         <span class="title has-arrow next-view">View All Reports</span>
     </li>
-    <li ng-class="{'active': isReportView(reportViews[1])}" ng-click="switchReportView(reportViews[1])" ng-show="shouldShowScheduleReport()">
+    <li ng-class="{ 'active': reportViewStore.showingScheduledReports || reportViewStore.showingScheduleAReport }"
+      ng-click="reportMainMenuChange(reportViewActions.SHOW_SCHEDULED_REPORTS)"
+      ng-show="shouldShowScheduleReport()">
         <i class="icon-report icon-schedule"></i>
         <span class="title has-arrow next-view">Scheduled Reports</span>
     </li>
-    <li ng-class="{'active': isReportView(reportViews[2])}" ng-click="switchReportView(reportViews[2])">
+    <li ng-class="{ 'active': reportViewStore.showingExportReports || reportViewStore.showingExportAReport }"
+      ng-click="reportMainMenuChange(reportViewActions.SHOW_EXPORT_REPORTS)"
+      ng-show="shouldShowScheduleReport()">
         <i class="icon-report icon-schedule"></i>
         <span class="title has-arrow next-view">Export Reports</span>
     </li>
